--- a/Assigmnet 4/Assigmnet 4/Base.lproj/Main.storyboard
+++ b/Assigmnet 4/Assigmnet 4/Base.lproj/Main.storyboard
@@ -16,33 +16,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Fn3-dA-Lw5">
-                                <rect key="frame" x="128" y="190" width="320" height="894"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Fn3-dA-Lw5">
+                                <rect key="frame" x="10" y="118" width="383" height="666"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood Tracker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iDZ-do-p2z">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="216"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood Tracker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iDZ-do-p2z">
+                                        <rect key="frame" x="0.0" y="0.0" width="383" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Mood is : :P" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ufq-H3-HJ4">
-                                        <rect key="frame" x="0.0" y="226" width="320" height="216"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Mood is : :P" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ufq-H3-HJ4">
+                                        <rect key="frame" x="0.0" y="96" width="383" height="28.666666666666671"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Cdl-Nu-Pmu">
-                                        <rect key="frame" x="-2" y="452" width="324" height="217"/>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Cdl-Nu-Pmu">
+                                        <rect key="frame" x="-2" y="185" width="387" height="31"/>
+                                        <connections>
+                                            <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="BD9-VG-gjn"/>
+                                        </connections>
                                     </slider>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="L60-We-FTx">
-                                        <rect key="frame" x="0.0" y="678" width="320" height="216"/>
+                                        <rect key="frame" x="0.0" y="275" width="383" height="216"/>
                                     </datePicker>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bd3-Wn-DyK">
+                                        <rect key="frame" x="0.0" y="551.33333333333337" width="383" height="34.333333333333371"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Save Mood"/>
+                                        <connections>
+                                            <action selector="saveMoodTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nFm-xv-Kmj"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IfH-ar-cUF">
+                                        <rect key="frame" x="0.0" y="645.66666666666663" width="383" height="20.333333333333371"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Fn3-dA-Lw5" secondAttribute="trailing" id="1xc-Mz-KPy"/>
+                            <constraint firstItem="Fn3-dA-Lw5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="Cs1-Vz-1hW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Fn3-dA-Lw5" secondAttribute="bottom" id="Lnp-yE-FLJ"/>
+                            <constraint firstItem="Fn3-dA-Lw5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WsU-uX-jmR"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="datePicker" destination="L60-We-FTx" id="iJ0-Jg-THV"/>
+                        <outlet property="moodLabel" destination="ufq-H3-HJ4" id="iWt-aW-kbH"/>
+                        <outlet property="moodSlider" destination="Cdl-Nu-Pmu" id="eQP-n1-48D"/>
+                        <outlet property="savedEntryLabel" destination="IfH-ar-cUF" id="O58-bq-cxQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
